# microprocessor

./: .clang-format  .gitignore  CMakeLists.txt  ForcedLineStatement.h  Modules.h  Processor.cpp  Processor.h  ReadMe.md  ReadMe.txt  Tests.h  Utils.cpp  Utils.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
Examples/: Test.asm
Program/: ReadMe.txt
Program/Code/: Test.txt
Program/Rezult/: Compiled_F_Test.txt  Compiled_N_Test.txt  Compiled_Test.txt
src/: CMakeLists.txt  FlatMap.h  ForcedCommand.cpp  ForcedCommand.h  ForcedLineStatement.h  Modules.h  Parsing.cpp  Parsing.h  Preprocessor.cpp  Preprocessor.h  Processor.h  Tests.cpp  Utils.cpp  Utils.h  main.cpp
tests/: ParsingTests.cpp  UtilsTests.cpp
